[tool.poetry]
name = "pdgen"
version = "0.3.2"
description = "A package for generating UML Class diagrams from Python code"
authors = ["Tobias Bück <tab@softoft.de>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/Softoft/pdgen/"
repository = "https://github.com/Softoft/pdgen/"
documentation = "https://github.com/Softoft/pdgen/"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

[tool.poetry.dependencies]
python = ">=3.12"
plantuml = "*"
requests = "*"

[tool.poetry.group.testing.dependencies]
pytest = "^8.3.3"

[tool.poetry.group.dev.dependencies]
twine = "*"
wheel = "*"
build = "*"
certifi = "*"
charset-normalizer = "*"
colorama = "*"
docutils = "*"
httplib2 = "*"
idna = "*"
importlib_metadata = "*"
jaraco-classes = "*"
jaraco-context = "*"
jaraco-functools = "*"
keyring = "*"
markdown-it-py = "*"
mdurl = "*"
more-itertools = "*"
nh3 = "*"
packaging = "*"
pkginfo = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
